# ticha

./: LICENSE  README.md  pyproject.toml  setup.py
src/ticha/: __init__.py  cli.py
src/ticha/core/: scraper.py  text_scraper.py
src/ticha/utils/: citation.py
tests/: test_text_scraper.py  test_ticha.py
