[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticha"
version = "0.1.0"
description = "Web scraper for Ticha Colonial Zapotec manuscript data"
readme = "README.md"
license = "MIT"
authors = [
    {name = "J. P. Péreztejada", email = "maclenn77@gmail.com"},
]
keywords = ["zapotec", "manuscripts", "web scraping", "pandas", "digital humanities"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0,<3.0.0",
    "selenium>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/maclenn77/ticha"
Repository = "https://github.com/maclenn77/ticha.git"
Issues = "https://github.com/maclenn77/ticha/issues"

[project.scripts]
ticha-scraper = "ticha.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
select = ["E", "F", "B", "SIM", "I"]
line-length = 88
target-version = "py39"
